@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-03-01T01:10:23Z",
+  "timestamp" : "2024-03-01T08:18:26Z",
   "count_outdated" : 1599,
   "uniques_outdated" : 875,
-  "count" : 1619,
-  "uniques" : 886,
+  "count" : 1620,
+  "uniques" : 887,
   "clones" : [
     {
       "timestamp": "2024-02-20T00:00:00Z",
@@ -91,6 +91,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-03-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
